<resources>
    <string name="app_name" translatable="false">HalChat</string>
    <string name="full_app_name" translatable="false">HalChatAndroid</string>
    <string name="service_name" translatable="false">HalChat</string>
    <string name="notification_ic_desc">Notifications</string>
    <string name="menu_ic_desc">Menu</string>
    <string name="join_chat_btn">Войти</string>
    <string name="request_password_btn">Запросить пароль</string>
    <string name="join_chat_input_hint">Введите пароль</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_chat_input_name_hint">Наименование чата</string>
    <string name="add_chat_select_public_pub">Публичный</string>
    <string name="add_chat_select_public_private">Приватный</string>
    <string name="add_chat_select_type_common">Обычный</string>
    <string name="add_chat_select_type_with_posts">С постами</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="create_chat_btn">Создать</string>
    <string name="create_password_chat_text">Придумайте пароль для чата</string>
    <string name="create_password_chat_btn">Подтвердить</string>
    <string name="chat_name">Чат</string>
    <string name="invite_users">Пригласить</string>
    <string name="admin_chat">Админ</string>
    <string name="desc_exit_chat">Выход из чата</string>
    <string name="desc_settings">Настройки чата</string>
    <string name="create_chat_user">Написать</string>
    <string name="type_message">Напишите что-нибудь...</string>
    <string name="settings_edit">Изменить</string>
    <string name="settings_icon_chat">Аватар:</string>
    <string name="settings_name_chat">Название:</string>
    <string name="settings_id_chat">ID:</string>
    <string name="settings_public_chat">Публичность:</string>
    <string name="settings_type_chat">Тип:</string>
    <string name="settings_save">Сохранить</string>
    <string name="settings_select">Выбрать</string>
    <string name="invite_chat_copy_with_password">Поделиться ссылкой</string>
    <string name="settings_app_exit_account">Выйти из Аккаунта</string>
    <string name="main_menu_exit_account">Выйти</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="count_comments">%1$d Комментариев</string>
    <string name="zero_timespan">0:00</string>
    <string name="zeroTime">00:00</string>
    <string name="opros_header">Опрос</string>
    <string name="opros_text">
        Расскажите как прошёл ваш опыт с Альфа версией приложением HalChat на Android. Нам очень важно получить отзыв об работоспособности и пользовательском опыте. Мы стараемся сделать всё чтобы
        пользователям было комфортнее. За прохождение опроса будет награда - вы получите 10 HalCoiNs, они добавятся на ваш счёт и после официального открытия HalCoiN будут уже у вас на счёте. Опрос можно пройти только
        один раз.</string>
    <string name="opros_da">Да</string>
    <string name="opros_net">Нет</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="zero">0</string>
    <string name="opros_question_1">Вылетало или перезагружалось ли приложение?</string>
    <string name="opros_question_2">Приходили ли двойные уведомления или вообще не приходили уведомления о новых сообщениях?</string>
    <string name="opros_question_3">Работали ли файлы и изображения в чатах?</string>
    <string name="opros_question_4">Сообщения в чатах обновлялись и всегда отправлялись?</string>
    <string name="opros_question_5">Всегда удавалось создавать или входить в чат?</string>
    <string name="opros_question_6">Насколько вас устраивает функционал и возможности в HalChat?</string>
    <string name="opros_question_7">Насколько бы вы порекомендовали нас друзьям?</string>
    <string name="opros_question_8">Насколько приложение было стабильное?</string>
    <string name="opros_question_9">Насколько было удобно пользоваться приложением?</string>
    <string name="opros_question_10">Если вы сталкивались с багами в HalChat опишите какие были баги и действия которые вы сделали чтобы их получить.</string>
    <string name="opros_question_11">Чтобы вы посоветали добавить или улучшить, напишите пожалуйста!</string>
    <string name="opros_question_12">Опишите, как вы понимаете что такое HalChat и какие есть возможности и функционал о котором вы знаете?</string>
    <string name="opros_thanks">
        Большое спасибо за прохождение опроса! Мы ценим ваше время, поэтому мы как и обещали вознаграждаем вас в 10 HalCoiNs. Рекомендуйте нас друзьям и за это вы можете получить
        вознаграждение - https://halch.at/referals. Если у вас остались вопросы или хотите узнать подробнее о HalChat - https://halch.at/about.
        Если нужна обратная связь или хотите дополнить свой отзыв - https://halch.at/helpmsg
    </string>
    <string name="opros_send_btn">Завершить и отправить</string>
    <string name="auth_login">E-mail</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_btn">Войти</string>
    <string name="auth_reg">Создать аккаунт</string>
    <string name="offline_text">Нет подключения</string>
    <string name="offline_retry">Проверьте интернет-соединение и попробуйте ещё раз</string>
    <string name="offline_retry_btn">Повторить</string>
    <string name="settings_app_auto_psw">Автоматический обмен паролями</string>
    <string name="settings_app_mute">Выключить уведомления</string>
    <string name="settings_app_user_agreement">Пользовательское соглашение</string>
    <string name="settings_app_privacy">Политика конфиденциальности</string>
    <string name="desc_exit_app">Выход из приложения</string>
    <string name="desc_settings_app">Настройки приложения</string>
    <string name="search_people_hint">Найти пользователя...</string>
    <string name="desc_search">Поиск пользователей, чатов и сообщений</string>
    <string name="main_menu_search">Поиск</string>
    <string name="invite_chat_short_copy_with_password">Поделиться короткой ссылкой</string>
    <string name="invite_users_btn">Пригласить</string>
    <string name="placeholder_find_users">Введите никнейм...</string>
    <string name="generate_password_chat_btn">Сгенерировать</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_nickname">Имя пользователя</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_repeat_password">Повторите пароль</string>
    <string name="reg_btn">Зарегистрироваться</string>
    <string name="reg_date">Дата рождения</string>
    <string name="creg_code">Код подтверждения</string>
    <string name="creg_confirm">Продолжить</string>
    <string name="reg_confirm"><![CDATA[Я подтверждаю, что мне исполнилось 18 лет, и принимаю условия  <a href="https://halwarsing.net/agreement" id="privacyHref">Пользовательского соглашения</a> и даю своё согласие Halwarsing.net на обработку моей персональной информации на условиях, определенных <a href="https://halwarsing.net/privacy" id="privacyHref">Политикой конфиденциальности</a>.]]></string>
    <string name="reg_confirm_notifs">Согласен(на) на получение новостей, акций и информационных рассылок HalNet на указанные при регистрации контакты (электронную почту и/или соцсети).</string>
    <string name="reg_auth">Авторизироваться</string>
    <string name="created_chat">Создан чат</string>
    <string name="pixels">Пиксели</string>
    <string name="emojis">Эмодзи</string>
    <string name="join_by_link_btn">Присоединиться</string>
    <string name="avatar_content">Аватарка</string>
    <string name="users_chat_menu">Пользователи чата</string>
    <string name="settings_chat_menu">Настройки чата</string>
    <string name="exit_chat_menu">Выйти из чата</string>
    <string name="chat_desc_name">Описание чата</string>
    <string name="poll_menu_add">Добавить</string>
    <string name="poll_menu_remove">Удалить</string>
    <string name="poll_menu_variant_1">1 вариант</string>
    <string name="poll_menu_variant_2">2 вариант</string>
    <string name="poll_menu_variant_3">3 вариант</string>
    <string name="poll_menu_variant_4">4 вариант</string>
    <string name="poll_menu_variant_5">5 вариант</string>
    <string name="answer_msg">Ответить</string>
    <string name="edit_msg">Редактировать</string>
    <string name="copy_message">Копировать текст</string>
    <string name="pin_message">Закрепить</string>
    <string name="delete_msg">Удалить</string>
</resources>