<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".main.RegActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/back_toolbar_layout"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="12"
            android:hint="@string/reg_email"
            android:autofillHints="emailAddress"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextNickname"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="12"
            android:hint="@string/reg_nickname"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="12"
            android:hint="@string/reg_password"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkBoxConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textViewConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_confirm"
                android:layout_gravity="center"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <CheckBox
                android:id="@+id/checkBoxConfirmNotifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textViewConfirmNotifs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_confirm_notifs"
                android:layout_gravity="center"
                android:textSize="10sp" />
        </LinearLayout>

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/regAuthButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_auth"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>