<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.JoinChatByLinkActivity">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:id="@+id/chatInfoLL">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="35dp"
            android:backgroundTint="@color/transparent">
            <ImageView
                android:id="@+id/iconChat"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/avatar_content"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_add_people"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nameChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/chat_name"
            android:textSize="28sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/descChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/chat_desc_name"
            android:textSize="22sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/joinChatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_by_link_btn"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>