<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".main.RegActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/back_toolbar_layout"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="12"
            android:hint="@string/reg_email"
            android:autofillHints="emailAddress"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="12"
            android:hint="@string/reg_password"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/authButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_btn"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>